--- a/compiler/pp.lpi
+++ b/compiler/pp.lpi
@@ -5,162 +5,115 @@
     <General>
       <ProjectType Value="Custom program"/>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="6"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
       <Title Value="pp"/>
     </General>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="17" HistoryIndex="16">
       <Position1>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="354" Column="1" TopLine="339"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxold.inc"/>
+        <Caret Line="1411" Column="16" TopLine="1394"/>
       </Position1>
       <Position2>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="355" Column="1" TopLine="340"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxold.inc"/>
+        <Caret Line="1412" Column="16" TopLine="1395"/>
       </Position2>
       <Position3>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="357" Column="1" TopLine="342"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxold.inc"/>
+        <Caret Line="1413" Column="16" TopLine="1396"/>
       </Position3>
       <Position4>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="363" Column="1" TopLine="348"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxold.inc"/>
+        <Caret Line="4" Column="35" TopLine="1"/>
       </Position4>
       <Position5>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="376" Column="1" TopLine="361"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Caret Line="19" Column="14" TopLine="1"/>
       </Position5>
       <Position6>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="377" Column="1" TopLine="362"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Caret Line="67" Column="7" TopLine="50"/>
       </Position6>
       <Position7>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="381" Column="1" TopLine="366"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Caret Line="119" Column="13" TopLine="96"/>
       </Position7>
       <Position8>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="339" Column="1" TopLine="324"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Caret Line="121" Column="15" TopLine="96"/>
       </Position8>
       <Position9>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="354" Column="1" TopLine="339"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Caret Line="124" Column="15" TopLine="96"/>
       </Position9>
       <Position10>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="355" Column="1" TopLine="340"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Caret Line="6" Column="6" TopLine="1"/>
       </Position10>
       <Position11>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="357" Column="1" TopLine="342"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Caret Line="63" Column="45" TopLine="46"/>
       </Position11>
       <Position12>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="363" Column="1" TopLine="348"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Caret Line="64" Column="37" TopLine="47"/>
       </Position12>
       <Position13>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="339" Column="1" TopLine="324"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Caret Line="65" Column="33" TopLine="48"/>
       </Position13>
       <Position14>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="354" Column="1" TopLine="339"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Caret Line="77" Column="53" TopLine="60"/>
       </Position14>
       <Position15>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="355" Column="1" TopLine="340"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/bunxtype.inc"/>
+        <Caret Line="12" Column="17" TopLine="1"/>
       </Position15>
       <Position16>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="357" Column="1" TopLine="342"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/bunxtype.inc"/>
+        <Caret Line="71" Column="30" TopLine="54"/>
       </Position16>
       <Position17>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="363" Column="1" TopLine="348"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/bunxtype.inc"/>
+        <Caret Line="72" Column="36" TopLine="55"/>
       </Position17>
-      <Position18>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="376" Column="1" TopLine="361"/>
-      </Position18>
-      <Position19>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="339" Column="1" TopLine="324"/>
-      </Position19>
-      <Position20>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="354" Column="1" TopLine="339"/>
-      </Position20>
-      <Position21>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="355" Column="1" TopLine="340"/>
-      </Position21>
-      <Position22>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="357" Column="1" TopLine="342"/>
-      </Position22>
-      <Position23>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="363" Column="1" TopLine="348"/>
-      </Position23>
-      <Position24>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="364" Column="1" TopLine="349"/>
-      </Position24>
-      <Position25>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="366" Column="1" TopLine="351"/>
-      </Position25>
-      <Position26>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="367" Column="1" TopLine="352"/>
-      </Position26>
-      <Position27>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="368" Column="1" TopLine="353"/>
-      </Position27>
-      <Position28>
-        <Filename Value="cutils.pas"/>
-        <Caret Line="390" Column="1" TopLine="374"/>
-      </Position28>
-      <Position29>
-        <Filename Value="cutils.pas"/>
-        <Caret Line="391" Column="1" TopLine="376"/>
-      </Position29>
-      <Position30>
-        <Filename Value="aggas.pas"/>
-        <Caret Line="372" Column="74" TopLine="354"/>
-      </Position30>
     </JumpHistory>
-    <Units Count="71">
+    <Units Count="81">
       <Unit0>
         <CursorPos X="1" Y="202"/>
         <Filename Value="pp.pas"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="187"/>
         <UnitName Value="pp"/>
-        <UsageCount Value="64"/>
+        <UsageCount Value="68"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="9" Y="12"/>
+        <CursorPos X="21" Y="115"/>
+        <EditorIndex Value="8"/>
         <Filename Value="fpcdefs.inc"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="8"/>
+        <Loaded Value="True"/>
+        <TopLine Value="88"/>
+        <UsageCount Value="12"/>
       </Unit1>
       <Unit2>
-        <CursorPos X="26" Y="426"/>
+        <CursorPos X="8" Y="322"/>
+        <EditorIndex Value="3"/>
         <Filename Value="paramgr.pas"/>
-        <TopLine Value="406"/>
-        <UsageCount Value="21"/>
+        <Loaded Value="True"/>
+        <TopLine Value="304"/>
+        <UnitName Value="paramgr"/>
+        <UsageCount Value="22"/>
       </Unit2>
       <Unit3>
         <CursorPos X="1" Y="391"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="16"/>
         <Filename Value="cutils.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="376"/>
         <UnitName Value="cutils"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="12"/>
       </Unit3>
       <Unit4>
         <CursorPos X="61" Y="694"/>
@@ -201,11 +154,13 @@
         <UsageCount Value="28"/>
       </Unit9>
       <Unit10>
-        <CursorPos X="1" Y="2059"/>
+        <CursorPos X="2" Y="930"/>
+        <EditorIndex Value="2"/>
         <Filename Value="cgobj.pas"/>
-        <TopLine Value="2044"/>
+        <Loaded Value="True"/>
+        <TopLine Value="913"/>
         <UnitName Value="cgobj"/>
-        <UsageCount Value="28"/>
+        <UsageCount Value="30"/>
       </Unit10>
       <Unit11>
         <CursorPos X="27" Y="568"/>
@@ -248,10 +203,12 @@
         <UsageCount Value="10"/>
       </Unit16>
       <Unit17>
-        <CursorPos X="5" Y="224"/>
+        <CursorPos X="1" Y="159"/>
+        <EditorIndex Value="4"/>
         <Filename Value="arm/cgcpu.pas"/>
-        <TopLine Value="209"/>
-        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <TopLine Value="141"/>
+        <UsageCount Value="11"/>
       </Unit17>
       <Unit18>
         <CursorPos X="1" Y="473"/>
@@ -274,11 +231,12 @@
         <UsageCount Value="10"/>
       </Unit20>
       <Unit21>
-        <CursorPos X="11" Y="27"/>
+        <CursorPos X="1" Y="81"/>
+        <EditorIndex Value="6"/>
         <Filename Value="sparc/cpubase.pas"/>
-        <TopLine Value="12"/>
-        <UnitName Value="cpubase"/>
-        <UsageCount Value="15"/>
+        <Loaded Value="True"/>
+        <TopLine Value="54"/>
+        <UsageCount Value="16"/>
       </Unit21>
       <Unit22>
         <CursorPos X="11" Y="23"/>
@@ -343,9 +301,7 @@
       </Unit30>
       <Unit31>
         <CursorPos X="1" Y="148"/>
-        <EditorIndex Value="11"/>
         <Filename Value="pass_2.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="133"/>
         <UnitName Value="pass_2"/>
         <UsageCount Value="18"/>
@@ -387,12 +343,12 @@
       </Unit36>
       <Unit37>
         <CursorPos X="5" Y="1455"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="19"/>
         <Filename Value="ncgutil.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="1454"/>
         <UnitName Value="ncgutil"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="14"/>
       </Unit37>
       <Unit38>
         <CursorPos X="69" Y="568"/>
@@ -409,10 +365,9 @@
       </Unit39>
       <Unit40>
         <CursorPos X="1" Y="88"/>
-        <EditorIndex Value="7"/>
         <Filename Value="arm/cpupi.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="72"/>
+        <UnitName Value="cpupi"/>
         <UsageCount Value="11"/>
       </Unit40>
       <Unit41>
@@ -436,23 +391,25 @@
         <UsageCount Value="9"/>
       </Unit43>
       <Unit44>
-        <CursorPos X="34" Y="176"/>
+        <CursorPos X="5" Y="25"/>
+        <EditorIndex Value="7"/>
         <Filename Value="sparc/aasmcpu.pas"/>
-        <TopLine Value="176"/>
-        <UsageCount Value="10"/>
+        <Loaded Value="True"/>
+        <TopLine Value="8"/>
+        <UsageCount Value="11"/>
       </Unit44>
       <Unit45>
-        <CursorPos X="4" Y="755"/>
+        <CursorPos X="14" Y="1100"/>
+        <EditorIndex Value="1"/>
         <Filename Value="globals.pas"/>
-        <TopLine Value="740"/>
+        <Loaded Value="True"/>
+        <TopLine Value="1071"/>
         <UnitName Value="globals"/>
-        <UsageCount Value="9"/>
+        <UsageCount Value="12"/>
       </Unit45>
       <Unit46>
         <CursorPos X="6" Y="422"/>
-        <EditorIndex Value="5"/>
         <Filename Value="options.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="407"/>
         <UnitName Value="options"/>
         <UsageCount Value="11"/>
@@ -466,21 +423,21 @@
       </Unit47>
       <Unit48>
         <CursorPos X="1" Y="454"/>
-        <EditorIndex Value="2"/>
+        <EditorIndex Value="17"/>
         <Filename Value="assemble.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="438"/>
         <UnitName Value="assemble"/>
-        <UsageCount Value="13"/>
+        <UsageCount Value="15"/>
       </Unit48>
       <Unit49>
-        <CursorPos X="1" Y="339"/>
+        <CursorPos X="1" Y="357"/>
         <EditorIndex Value="0"/>
         <Filename Value="aggas.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="324"/>
         <UnitName Value="aggas"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="13"/>
       </Unit49>
       <Unit50>
         <CursorPos X="6" Y="1259"/>
@@ -586,56 +543,130 @@
       </Unit64>
       <Unit65>
         <CursorPos X="7" Y="484"/>
-        <EditorIndex Value="12"/>
         <Filename Value="regvars.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="469"/>
         <UnitName Value="regvars"/>
         <UsageCount Value="11"/>
       </Unit65>
       <Unit66>
         <CursorPos X="6" Y="1582"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="21"/>
         <Filename Value="scanner.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="1567"/>
         <UnitName Value="scanner"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="13"/>
       </Unit66>
       <Unit67>
         <CursorPos X="3" Y="720"/>
-        <EditorIndex Value="10"/>
         <Filename Value="i386/csopt386.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="704"/>
+        <UnitName Value="CSOpt386"/>
         <UsageCount Value="11"/>
       </Unit67>
       <Unit68>
         <CursorPos X="1" Y="81"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="20"/>
         <Filename Value="powerpc/agppcgas.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="65"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="13"/>
       </Unit68>
       <Unit69>
         <CursorPos X="1" Y="1326"/>
-        <EditorIndex Value="6"/>
         <Filename Value="symtable.pas"/>
-        <Loaded Value="True"/>
         <TopLine Value="1311"/>
         <UnitName Value="symtable"/>
         <UsageCount Value="11"/>
       </Unit69>
       <Unit70>
         <CursorPos X="1" Y="79"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="18"/>
         <Filename Value="globtype.pas"/>
         <Loaded Value="True"/>
         <TopLine Value="63"/>
         <UnitName Value="globtype"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="13"/>
       </Unit70>
+      <Unit71>
+        <CursorPos X="10" Y="22"/>
+        <EditorIndex Value="14"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linux.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="1"/>
+        <UnitName Value="Linux"/>
+        <UsageCount Value="12"/>
+      </Unit71>
+      <Unit72>
+        <CursorPos X="29" Y="29"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxnew.inc"/>
+        <TopLine Value="35"/>
+        <UsageCount Value="10"/>
+      </Unit72>
+      <Unit73>
+        <CursorPos X="10" Y="148"/>
+        <EditorIndex Value="15"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/linuxold.inc"/>
+        <Loaded Value="True"/>
+        <TopLine Value="131"/>
+        <UsageCount Value="12"/>
+      </Unit73>
+      <Unit74>
+        <CursorPos X="19" Y="19"/>
+        <EditorIndex Value="9"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/unix.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="1"/>
+        <UnitName Value="Unix"/>
+        <UsageCount Value="12"/>
+      </Unit74>
+      <Unit75>
+        <CursorPos X="12" Y="36"/>
+        <EditorIndex Value="10"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/baseunix.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="16"/>
+        <UnitName Value="BaseUnix"/>
+        <UsageCount Value="12"/>
+      </Unit75>
+      <Unit76>
+        <CursorPos X="9" Y="75"/>
+        <EditorIndex Value="11"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/bunxtype.inc"/>
+        <Loaded Value="True"/>
+        <TopLine Value="58"/>
+        <UsageCount Value="12"/>
+      </Unit76>
+      <Unit77>
+        <CursorPos X="56" Y="78"/>
+        <EditorIndex Value="12"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/unix/bunxh.inc"/>
+        <Loaded Value="True"/>
+        <TopLine Value="61"/>
+        <UsageCount Value="12"/>
+      </Unit77>
+      <Unit78>
+        <CursorPos X="70" Y="125"/>
+        <EditorIndex Value="13"/>
+        <Filename Value="/home/mazen/FPC/Demo/src/fpc/rtl/linux/i386/stat.inc"/>
+        <Loaded Value="True"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="12"/>
+      </Unit78>
+      <Unit79>
+        <CursorPos X="1" Y="111"/>
+        <Filename Value="arm/cpubase.pas"/>
+        <TopLine Value="93"/>
+        <UsageCount Value="10"/>
+      </Unit79>
+      <Unit80>
+        <CursorPos X="1" Y="130"/>
+        <EditorIndex Value="5"/>
+        <Filename Value="m68k/cpubase.pas"/>
+        <Loaded Value="True"/>
+        <TopLine Value="108"/>
+        <UsageCount Value="11"/>
+      </Unit80>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -655,8 +686,8 @@
   <CompilerOptions>
     <Version Value="2"/>
     <SearchPaths>
-      <IncludeFiles Value=".;sparc/"/>
-      <OtherUnitFiles Value=".;sparc/;systems/"/>
+      <IncludeFiles Value="sparc/"/>
+      <OtherUnitFiles Value="sparc/;systems/"/>
       <UnitOutputDirectory Value="sparc/"/>
     </SearchPaths>
     <Parsing>
@@ -674,12 +705,12 @@
       </Debugging>
     </Linking>
     <Other>
-      <CustomOptions Value="-dExtDebug -dSPARC -dGDB -dNewRA -dHaveLinuxRtl10"/>
+      <CustomOptions Value="-dExtDebug -dSPARC -dGDB -dNewRA"/>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
   <Debugging>
-    <BreakPoints Count="5">
+    <BreakPoints Count="3">
       <Item1>
         <Source Value="paramgr.pas"/>
         <Line Value="427"/>
@@ -692,14 +723,6 @@
         <Source Value="assemble.pas"/>
         <Line Value="454"/>
       </Item3>
-      <Item4>
-        <Source Value="aggas.pas"/>
-        <Line Value="357"/>
-      </Item4>
-      <Item5>
-        <Source Value="aggas.pas"/>
-        <Line Value="339"/>
-      </Item5>
     </BreakPoints>
     <Watches Count="1">
       <Item1>
