--- a/packages/extra/Makefile.fpc
+++ b/packages/extra/Makefile.fpc
@@ -37,7 +37,7 @@ dirs_emx=os2units \
 dirs_go32v2=unzip
 dirs_amiga=amunits
 dirs_palmos=palmunits
-dirs_netware=zlib
+dirs_netware=unzip zlib
 dirs_darwin= unzip \
              x11 opengl gtk syslog \
              forms svgalib ggi libpng libgd \
