--- a/rtl/morphos/Makefile.fpc
+++ b/rtl/morphos/Makefile.fpc
@@ -11,7 +11,8 @@ units=$(SYSTEMUNIT) objpas strings \
       dos \
       sysutils classes math typinfo varutils \
       charset ucomplex getopts matrix \
-      variants types rtlconst sysconst dateutil
+      variants types rtlconst sysconst dateutil \
+      exec timer doslib utility
 rsts=math rtlconst varutils typinfo variants classes sysconst dateutil
 
 [require]
@@ -162,3 +163,11 @@ charset$(PPUEXT) : $(INC)/charset.pp $(SYSTEMUNIT)$(PPUEXT)
 #
 # Other system-dependent RTL Units
 #
+
+exec$(PPUEXT)    : exec.pp execf.inc execd.inc
+
+timer$(PPUEXT)   : timer.pp timerd.inc timerf.inc
+
+utility$(PPUEXT) : utility.pp exec$(PPUEXT) utilf.inc utild1.inc utild2.inc
+
+doslib$(PPUEXT)  : doslib.pp exec$(PPUEXT) timer$(PPUEXT) doslibd.inc doslibf.inc
