+ Added unit macpas

--- a/rtl/beos/Makefile.fpc
+++ b/rtl/beos/Makefile.fpc
@@ -140,6 +140,13 @@ types$(PPUEXT) : $(OBJPASDIR/types.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
         $(COMPILER) $(OBJPASDIR)/types.pp
 
 #
+# Mac Pascal Model
+#
+
+macpas$(PPUEXT) : $(INC)/macpas.pp system$(PPUEXT)
+        $(COMPILER) $(INC)/macpas.pp $(REDIR)
+
+#
 # Other system-independent RTL Units
 #
 
