--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -117,6 +117,13 @@ sysutils$(PPUEXT) : $(OBJPASDIR)/sysutils.pp objpas$(PPUEXT) system$(PPUEXT)
 #$(DEL) sysutils.pp
 
 #
+# Mac Pascal Model
+#
+
+macpas$(PPUEXT) : $(INC)/macpas.pp system$(PPUEXT)
+        $(COMPILER) $(INC)/macpas.pp $(REDIR)
+
+#
 # System Dependent Units
 #
 
@@ -148,7 +155,10 @@ heaptrc$(PPUEXT) : $(INC)/heaptrc.pp system$(PPUEXT)
 
 #
 # $Log$
-# Revision 1.7  2004-07-07 21:37:29  daniel
+# Revision 1.8  2004-08-16 16:22:17  olle
+#   + Added unit macpas
+#
+# Revision 1.7  2004/07/07 21:37:29  daniel
 #   * Matrix unit included in build process
 #
 # Revision 1.6  2004/05/06 22:01:17  florian
