--- a/rtl/darwin/Makefile.fpc
+++ b/rtl/darwin/Makefile.fpc
@@ -8,7 +8,7 @@ main=rtl
 # disabled units: serial sockets ipc mouse console
 [target]
 loaders=
-units=$(SYSTEMUNIT) objpas strings sysctl baseunix unixtype unixutil \
+units=$(SYSTEMUNIT) objpas macpas strings sysctl baseunix unixtype unixutil \
       unix initc cmem matrix \
       dos dl objects printer sockets \
       sysutils typinfo systhrds classes math varutils \
@@ -195,6 +195,12 @@ strutils$(PPUEXT) : $(OBJPASDIR)/strutils.pp objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUE
                     sysutils$(PPUEXT)
         $(COMPILER) $(OBJPASDIR)/strutils.pp
 
+#
+# Mac Pascal Model
+#
+
+macpas$(PPUEXT) : $(INC)/macpas.pp system$(PPUEXT)
+        $(COMPILER) $(INC)/macpas.pp $(REDIR)
 
 #
 # Other system-independent RTL Units
