--- a/rtl/macos/Makefile.fpc
+++ b/rtl/macos/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=
-units=system strings objpas heaptrc getopts macostp macutils unixutil dos objects matrix
+units=system strings objpas macpas heaptrc getopts macostp macutils unixutil dos objects matrix
 #      exec  \
 #      crt printer \
 #      lineinfo  graph \
@@ -107,6 +107,13 @@ sysutils$(PPUEXT) : $(OBJPASDIR)/sysutils.pp objpas$(PPUEXT) system$(PPUEXT) sys
 	$(COPY) $(OBJPASDIR)/sysutils.pp .
 	$(COMPILER) sysutils $(REDIR)
 #$(DEL) sysutils.pp
+
+#
+# Mac Pascal Model
+#
+
+macpas$(PPUEXT) : $(INC)/macpas.pp system$(PPUEXT)
+        $(COMPILER) $(INC)/macpas.pp $(REDIR)
 
 #
 # System Dependent Units
