--- a/install/debian/fp-units-base.install.in
+++ b/install/debian/fp-units-base.install.in
@@ -5,3 +5,4 @@
 /usr/lib/fpc/%{fpcversion}/units/linux/ncurses
 /usr/lib/fpc/%{fpcversion}/units/linux/x11
 /usr/lib/fpc/%{fpcversion}/units/linux/regexpr
+/usr/lib/fpc/%{fpcversion}/units/linux/md5
