--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -15,7 +15,7 @@ units=$(SYSTEMUNIT) objpas strings syscall sysctl unixtype baseunix unixutil \
       dos dl termio objects printer \
       sysutils typinfo systhrds types classes math varutils dynlibs \
       cpu mmx charset ucomplex crt getopts heaptrc lineinfo \
-      errors sockets gpm ipc terminfo \
+      errors sockets ipc terminfo \
       video mouse keyboard console serial variants  sysctl dateutils \
       sysconst cthreads strutils convutils
 
