--- a/rtl/openbsd/Makefile.fpc
+++ b/rtl/openbsd/Makefile.fpc
@@ -10,7 +10,7 @@ fpcpackage=y
 
 [target]
 loaders=prt0 cprt0
-units=$(SYSTEMUNIT) objpas strings syscall baseunix \
+units=$(SYSTEMUNIT) objpas macpas strings syscall baseunix \
       $(LINUXUNIT) unix initc systhrds \
       dos crt objects printer matrix \
       sysutils classes typinfo math varutils \
