--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=wprt0 wdllprt0 gprt0
-units=$(SYSTEMUNIT) systhrds objpas strings \
+units=$(SYSTEMUNIT) systhrds objpas macpas strings \
       lineinfo heaptrc matrix \
       windows ole2 activex shellapi shlobj winsock initc cmem \
       dos crt objects graph messages \
