--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -1445,7 +1445,7 @@ endif
 
 ifneq ($(TARGET_EXAMPLES),)
 HASEXAMPLES=1
-override EXAMPLESOURCEFILES:=$(wildcard $(addsuffix .pp,$(TARGET_EXAMPLES)) $(addsuffix .pas,$(TARGET_EXAMPLES)) $(addsuffix .dpr,$(TARGET_EXAMPLES)))
+override EXAMPLESOURCEFILES:=$(wildcard $(addsuffix .pp,$(TARGET_EXAMPLES)) $(addsuffix .pas,$(TARGET_EXAMPLES)) $(addsuffix .lpr,$(TARGET_EXAMPLES)) $(addsuffix .dpr,$(TARGET_EXAMPLES)))
 override EXAMPLEFILES:=$(addsuffix $(EXEEXT),$(TARGET_EXAMPLES))
 override EXAMPLEOFILES:=$(addsuffix $(OEXT),$(TARGET_EXAMPLES)) $(addprefix $(STATICLIBPREFIX),$(addsuffix $(STATICLIBEXT),$(TARGET_EXAMPLES)))
 
@@ -1487,7 +1487,7 @@ fpc_release:
 
 # General compile rules, available for both possible .pp and .pas extensions
 
-.SUFFIXES: $(EXEEXT) $(PPUEXT) $(OEXT) .pas .dpr .pp .rc .res
+.SUFFIXES: $(EXEEXT) $(PPUEXT) $(OEXT) .pas .lpr .dpr .pp .rc .res
 
 %$(PPUEXT): %.pp
         $(COMPILER) $<
@@ -1505,6 +1505,10 @@ fpc_release:
         $(COMPILER) $<
         $(EXECPPAS)
 
+%$(EXEEXT): %.lpr
+        $(COMPILER) $<
+        $(EXECPPAS)
+
 %$(EXEEXT): %.dpr
         $(COMPILER) $<
         $(EXECPPAS)
@@ -1512,9 +1516,10 @@ fpc_release:
 %.res: %.rc
         windres -i $< -o $@
 
-# Search paths for .ppu and .pp and .pas .dpr
+# Search paths for .ppu, .pp, .pas, .lpr, .dpr
 vpath %.pp $(COMPILER_SOURCEDIR) $(COMPILER_INCLUDEDIR)
 vpath %.pas $(COMPILER_SOURCEDIR) $(COMPILER_INCLUDEDIR)
+vpath %.lpr $(COMPILER_SOURCEDIR) $(COMPILER_INCLUDEDIR)
 vpath %.dpr $(COMPILER_SOURCEDIR) $(COMPILER_INCLUDEDIR)
 vpath %$(PPUEXT) $(COMPILER_UNITTARGETDIR)
 
