* added target netwlibc

--- a/utils/fpcm/fpcmake.ini
+++ b/utils/fpcm/fpcmake.ini
@@ -833,12 +833,20 @@ FPCMADE=fpcmade.qnx
 ZIPSUFFIX=qnx
 endif
 
-# Netware
+# Netware clib
 ifeq ($(OS_TARGET),netware)
 EXEEXT=.nlm
 STATICLIBPREFIX=
 FPCMADE=fpcmade.nw
 ZIPSUFFIX=nw
+endif
+
+# Netware libc
+ifeq ($(OS_TARGET),netwlibc)
+EXEEXT=.nlm
+STATICLIBPREFIX=
+FPCMADE=fpcmade.nwl
+ZIPSUFFIX=nwl
 endif
 
 # MacOS
@@ -1026,6 +1034,20 @@ STATICLIBEXT=.a
 SHAREDLIBEXT=.nlm
 FPCMADE=fpcmade.nw
 ZIPSUFFIX=nw
+EXEEXT=.nlm
+endif
+
+# Netware libc
+ifeq ($(OS_TARGET),netwlibc)
+STATICLIBPREFIX=
+PPUEXT=.ppu
+OEXT=.o
+ASMEXT=.s
+SMARTEXT=.sl
+STATICLIBEXT=.a
+SHAREDLIBEXT=.nlm
+FPCMADE=fpcmade.nwl
+ZIPSUFFIX=nwl
 EXEEXT=.nlm
 endif
 
