--- a/rtl/Makefile.fpc
+++ b/rtl/Makefile.fpc
@@ -20,6 +20,8 @@ dirs_amiga=amiga
 dirs_netbsd=netbsd
 dirs_macos=macos
 dirs_morphos=morphos
+dirs_netware=netware
+dirs_netwlibc=netwlibc
 
 [install]
 fpcpackage=y
