* fixed definition of pthread_mutex_t for non-linux targets (and for     linux as well, actually).   * base libpthread definitions are now in ptypes.inc, included in unixtype     They sometimes have an extra underscore in front of their name, in     case they were also exported by the packages/base/pthreads unit, so     they can keep their original name there   * cthreadds unit now imports systuils, because it uses exceptions (it     already did so before as well)   * fixed many linux definitions of libpthread functions in pthrlinux.inc     (integer -> cint etc)   + added culonglong type to ctype.inc

--- a/rtl/darwin/Makefile.fpc
+++ b/rtl/darwin/Makefile.fpc
@@ -254,7 +254,7 @@ cmem$(PPUEXT) : $(INC)/cmem.pp $(SYSTEMUNIT)$(PPUEXT)
 
 sysctl$(PPUEXT) : $(BSDINC)/sysctl.pp $(SYSTEMUNIT)$(PPUEXT)
 
-cthreads$(PPUEXT) : $(UNIXINC)/cthreads.pp systhrds$(PPUEXT) unix$(PPUEXT)
+cthreads$(PPUEXT) : $(UNIXINC)/cthreads.pp systhrds$(PPUEXT) unix$(PPUEXT) sysutils$(PPUEXT)
 
 initc$(PPUEXT) : $(SYSTEMUNIT)$(PPUEXT)
 
